[gd_scene load_steps=16 format=3 uid="uid://560ybjasrnu0"]

[ext_resource type="Script" path="res://Towers/sword_cat.gd" id="1_fv42o"]
[ext_resource type="Texture2D" uid="uid://6ofbxivsq0ye" path="res://Assets/towers/KnightSpriteSheet.png" id="2_vp6bs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ixfjh"]
radius = 30.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jcu2y"]
atlas = ExtResource("2_vp6bs")
region = Rect2(0, 32, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2k2i"]
atlas = ExtResource("2_vp6bs")
region = Rect2(42, 32, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g18k"]
atlas = ExtResource("2_vp6bs")
region = Rect2(84, 32, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etq5s"]
atlas = ExtResource("2_vp6bs")
region = Rect2(126, 32, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jycc"]
atlas = ExtResource("2_vp6bs")
region = Rect2(0, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg3e4"]
atlas = ExtResource("2_vp6bs")
region = Rect2(42, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbjns"]
atlas = ExtResource("2_vp6bs")
region = Rect2(84, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4srk6"]
atlas = ExtResource("2_vp6bs")
region = Rect2(126, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhadx"]
atlas = ExtResource("2_vp6bs")
region = Rect2(168, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxdbc"]
atlas = ExtResource("2_vp6bs")
region = Rect2(210, 0, 42, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0w6eo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcu2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2k2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g18k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etq5s")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jycc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg3e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbjns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4srk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhadx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxdbc")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vxcu0"]
radius = 128.0

[node name="SwordCat" type="StaticBody2D"]
script = ExtResource("1_fv42o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ixfjh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(18, -23)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_0w6eo")
animation = &"attack"
autoplay = "default"
frame = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vxcu0")

[node name="Node2D" type="Node2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
